--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,210 @@
-.App {
-  text-align: center;
-}
+/* body {
+  background-color: rgb(97, 205, 238);
+} */
+
+.static {
+    text-align: center;
+    font-family:monospace;
+    overflow: auto;
+    background-image: url(https://cdn5.vectorstock.com/i/1000x1000/29/14/paws-background-paw-blue-pattern-vector-21602914.jpg)
+  }
+  
+  .static img {
+    width: 300px;
+    height: fit-content;
+    float: left;
+    margin-left: 35px;
+    margin-right: 0px;
+  }
+  
+  .header {
+    color: black;
+    text-align: center;
+    text-shadow: 2px 2px rgb(252, 250, 250);    
+    font-size: 50pt;
+    font-family:monospace;
+    position: relative;
+    left: -150px;
+    margin:0; 
+    padding:0;
+    vertical-align: center;
+  }
+  
+  .home {
+    text-align: center;
+    vertical-align: center;
+    background-color: rgb(157, 157, 157);
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    width: 170px;
+    height: 50px;
+  
+  }
+  
+  .home:hover {
+    background-color:rgb(251, 188, 79);
+    box-shadow: 5px 3px 3px rgb(55, 55, 55);
+  }
+  
+  .links {
+    text-align: center;
+    vertical-align: center;
+    line-height: 50px;
+    color: white;
+    text-decoration: none;
+  }
+  
+  #searchbar {
+    top: 355px;
+    left: 575px;
+    width: auto;
+    font-size: 20pt;
+  }
+  
+  .bodyContent {
+    display: flex;
+  }
+  
+  .form-box {
+    font-family:monospace;
+    padding: 20px;
+    margin: 1rem 0;
+    margin-left: 25px;
+    margin-right: 75px;
+    background-color: rgb(97, 205, 238);
+    width: 400px;
+    height: 500px;
+    border-radius: 25px;
+  }
+  
+  .form-box:hover {
+    border-color: rgb(7, 138, 177);
+    box-shadow: 0 0 15px rgb(7, 138, 177);
+  }
+  
+  .form-box button {
+    float: right;
+  }
+  
+  #size,
+  #sex {
+    font-size: 20px;
+    margin-left: 10px;
+    margin-right: 0px;
+  } 
+  
+  .petdiv {
+    width: 70%;
+  }
+  
+  .petdiv #title {
+    text-align: left;
+    color: rgb(251, 188, 79);
+    text-shadow: 2px 2px rgb(254, 234, 205);    
+    font-size: 35pt;
+    font-family:monospace;
+  }
+  
+  .petcard {
+    background: rgb(254, 234, 205);
+    box-shadow: 5px 3px 3px rgb(55, 55, 55);
+    width: 240px;
+    padding: 20px;
+    margin: 10px;
+    float:left;
+    object-fit: contain;
+    font-family:monospace;
+    border-radius: 30px;
+  }
+  
+  .petcard:hover {
+    border-color: rgb(220, 184, 130);
+    box-shadow: 0 0 15px rgb(220, 184, 130);
+  }
+  
+  .petcard img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  
+  .cardLinks {
+    text-decoration: none;
+    color: rgb(19, 19, 19);
+    font-family:monospace;
+  }
+  
+  .petcard button, 
+  .submitButton,
+  .petcardDetails button {
+    color: rgb(24, 24, 24);
+    background-color: white;
+    border-radius: 10px;
+    font-family:monospace;
+    /* box-shadow: 1px 2px rgb(104, 104, 104); */
+  }
+  
+  .petcard button:hover, 
+  .submitButton:hover,
+  .petcardDetails button:hover {
+    background-color: rgb(251, 188, 79);
+    box-shadow: 1px 2px rgb(104, 104, 104);
+  }
+  
+  #takehome:hover {
+    color: rgb(104, 104, 104);
+    background-color: springgreen;
+  }
+  
+  .petdivdetails {
+    width: 60%;
+  }
+  
+  .petcardDetails {
+    background: rgb(254, 234, 205);
+    box-shadow: 5px 3px 3px rgb(55, 55, 55);
+    padding: 40px;
+    object-fit: contain;
+    font-family:monospace;
+    border-radius: 30px;
+    margin-top: 1em;
+    height: 500px;
+  }
+  
+  .petcardDetails img {
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    float: right;
+  }
+  
+  .petcardDetails h1 {
+    font-size: 60px;
+  }
+  
+  .petcardDetails li {
+    font-size: 22px;
+  }
+  
+  .petcardDetails p {
+    font-size: 20px;
+    text-align: center;
+    font-style: italic;
+  }
+  
+  .text,
+  .searchbar {
+    padding: 0.25rem;
+    border: none;
+    font-family: inherit;
+    font-size: 1.2em;
+    border-bottom: 2px solid gray;
+    transition: all 0.2s;
+    width: 100%;
+  }
+  
+  input:focus {
+    outline: none;
+    border-bottom: 2px solid var(--green);
+  }
